--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -66,13 +66,8 @@
    "outputs": [],
    "source": [
     "from polygon.rest import RESTClient\n",
-    "from datetime import datetime, date, time, timedelta\n",
-    "from pytz import timezone\n",
-    "import os\n",
-    "import pytz\n",
+    "from datetime import date\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
     "import mplfinance as mpf\n",
     "\n",
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
