--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -19,7 +19,7 @@
     "from datetime import datetime, date, time, timedelta\n",
     "from pytz import timezone\n",
     "from functools import lru_cache\n",
-    "from utils import get_market_dates, first_trading_date_after, last_trading_date_before, first_trading_date_after_equal, last_trading_date_before_equal, get_tickers\n",
+    "from times import get_market_dates, first_trading_date_after, last_trading_date_before, first_trading_date_after_equal, last_trading_date_before_equal\n",
     "import os\n",
     "import pytz\n",
     "import pandas as pd\n",
