--- a/05_adjustments.ipynb
+++ b/05_adjustments.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "from polygon.rest import RESTClient\n",
     "from datetime import datetime, date, time, timedelta\n",
-    "from utils import first_trading_date_after_equal, last_trading_date_before_equal, get_tickers\n",
+    "from times import first_trading_date_after_equal, last_trading_date_before_equal\n",
+    "from tickers import get_tickers\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np"
