--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -17,9 +17,11 @@
     "###\n",
     "from polygon.rest import RESTClient\n",
     "from datetime import datetime, date, time, timedelta\n",
-    "from utils import get_tickers, download_m1_raw_data\n",
+    "from tickers import get_tickers\n",
+    "from data import download_m1_raw_data\n",
     "import pandas as pd\n",
     "from fastparquet import write\n",
+    "\n",
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
