--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_tickers, get_market_calendar\n",
+    "from tickers import get_tickers\n",
+    "from times import get_market_calendar\n",
     "from datetime import datetime, date, time\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
