--- a/08_renamings.ipynb
+++ b/08_renamings.ipynb
@@ -18,11 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_tickers, get_market_dates, get_ticker_changes, get_market_calendar\n",
+    "from tickers import get_tickers, get_ticker_changes\n",
+    "from times import get_market_dates, get_market_calendar\n",
     "from datetime import datetime, date, time\n",
-    "import mplfinance as mpf\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "END_DATE = date(2024, 3, 1)"
