--- a/09_aggregate.ipynb
+++ b/09_aggregate.ipynb
@@ -14,11 +14,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import remove_extended_hours\n",
+    "from data import remove_extended_hours\n",
     "from datetime import datetime\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "DATA_PATH = \"../data/polygon/\""
    ]
