--- a/10_extra_functions.ipynb
+++ b/10_extra_functions.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import remove_extended_hours\n",
+    "from data import remove_extended_hours\n",
     "from datetime import datetime, date, timedelta\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
