--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -25,12 +25,8 @@
     "from dateutil.relativedelta import relativedelta\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
     "import json\n",
-    "import pyarrow as pa\n",
-    "import pyarrow.parquet as pq\n",
-    "import ast\n",
+    "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "START_DATE = date(2019, 6, 1)\n",
@@ -135,8 +131,7 @@
     "tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
     "\n",
     "# Get list of market dates within our range\n",
-    "dates = get_market_dates()\n",
-    "dates = [day for day in dates if (day >= START_DATE and day <= END_DATE)]\n",
+    "dates = get_market_dates(START_DATE, END_DATE)\n",
     "dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
     "\n",
     "# Get market calendar in order to handle early closes\n",
@@ -204,8 +199,7 @@
     "# tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
     "\n",
     "# # Get list of market dates within our range\n",
-    "# dates = get_market_dates()\n",
-    "# dates = [day for day in dates if (day >= START_DATE and day <= END_DATE)]\n",
+    "# dates = get_market_dates(START_DATE, END_DATE)\n",
     "# dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
     "\n",
     "# for index, row in tickers.iterrows():\n",
@@ -259,8 +253,7 @@
     "tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
     "\n",
     "# Get list of market dates within our range\n",
-    "dates = get_market_dates()\n",
-    "dates = [day for day in dates if (day >= START_DATE and day <= END_DATE)]\n",
+    "dates = get_market_dates(START_DATE, END_DATE)\n",
     "dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
     "\n",
     "for index, row in tickers.iterrows():\n",
@@ -305,20 +298,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gaps[gaps.index >= date(2024, 2, 8)]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "TO DO\n",
-    "* Check gap up 30%\n",
     "* Intraday parabolic 20%\n",
     "* Instead of utils.py, spread it across 3 files just as with the backtester\n",
     "* Improve some functions to decrease repetitive code\n",
