--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -32,7 +32,7 @@
     "#####\n",
     "from polygon.rest import RESTClient\n",
     "from datetime import date\n",
-    "from utils import get_tickers\n",
+    "from tickers import get_tickers\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
