--- a/06_fastparquet.ipynb
+++ b/06_fastparquet.ipynb
@@ -20,11 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_tickers, download_m1_raw_data\n",
+    "from tickers import get_tickers\n",
     "from datetime import date\n",
     "from polygon.rest import RESTClient\n",
     "import pandas as pd\n",
-    "import os\n",
     "import pyarrow.parquet as pq\n",
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
