Written loop-based backtester for gaps

--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 11. Simulating screeners\n",
-    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>output/screens</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day.\n",
+    "In backtesting, sometimes we want to backtest all stocks. However this is computationally expensive thing to do. A better thing to do, is to to a preliminary screens and save them in the <code>output/screens</code> folder. Then when backtesting, we only use the tickers from the screens. This also resembles live trading, where the output from the screeners is used instead of downloading 5000+ symbols and scanning them.\n",
     "\n",
     "Warning: The screener results should not suffer from look-ahead bias. If you e.g. want to calculate the 14-day volume on day 1, you only have this available at the end of day 1. To account for this, sometimes you need to subtract 1 day when doing the calculations."
    ]
@@ -300,43 +300,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "TO DO\n",
-    "* Intraday parabolic 20%\n",
-    "* Instead of utils.py, spread it across 3 files just as with the backtester\n",
-    "* Improve some functions to decrease repetitive code\n",
-    "* Then update the notebook files accordingly\n",
-    "* Top gappers\n",
-    "* Do some gap analysis\n",
-    "    * Recreate some charts from daytradingzoo\n",
-    "    * Recreate a spikeet-style file\n",
-    "* Build the loop-based backtester"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'MLGO-2022-12-13'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_id('MLGO')"
-   ]
   }
  ],
  "metadata": {
