--- a/09_aggregate.ipynb
+++ b/09_aggregate.ipynb
@@ -31,9 +31,6 @@
     "all_files = os.listdir(DATA_PATH + f'processed/m1/')\n",
     "for index, file in enumerate(all_files):\n",
     "    ticker = file[:-19] # Remove date and parquet extension\n",
-    "    \n",
-    "    if ticker != 'LIAN':\n",
-    "        continue\n",
     "\n",
     "    bars = pd.read_parquet(DATA_PATH + f'processed/m1/{file}')\n",
     "\n",
@@ -43,13 +40,11 @@
     "                                    'low': 'min',\n",
     "                                    'close': 'last',\n",
     "                                    'close_original': 'last',\n",
-    "                                    'volume': 'sum',\n",
-    "                                    'tradeable': 'first',\n",
-    "                                    'halted': 'first'})\n",
+    "                                    'turnover': 'sum',\n",
+    "                                    'tradeable': 'first'})\n",
     "    # Pandas aggregation also adds non-trading days and times back. These can be easily removed by removing the NA values, because the first/max/min/last of nothing is NA. Also booleans are converted into 0/1, which has to be converted back.\n",
     "    m5 = m5.dropna()\n",
-    "    m5['tradeable'] = m5['tradeable'].astype('bool')\n",
-    "    m5['halted'] = m5['halted'].astype('bool')      \n",
+    "    m5['tradeable'] = m5['tradeable'].astype('bool')     \n",
     "    m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
     " \n",
     "    # For the daily, we only consider a bar untradeable if it has zero trade prices. So if all \"tradeable\" is False. Also we only consider regular trading hours.\n",
@@ -59,12 +54,10 @@
     "                                 'low': 'min',\n",
     "                                 'close': 'last',\n",
     "                                 'close_original': 'last',\n",
-    "                                 'volume': 'sum',\n",
-    "                                 'tradeable': 'max',\n",
-    "                                 'halted': 'min'})\n",
+    "                                 'turnover': 'sum',\n",
+    "                                 'tradeable': 'max'})\n",
     "    d1 = d1.dropna()\n",
-    "    d1['tradeable'] = d1['tradeable'].astype('bool')\n",
-    "    d1['halted'] = d1['halted'].astype('bool')   \n",
+    "    d1['tradeable'] = d1['tradeable'].astype('bool') \n",
     "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)"
    ]
   },
