Fixed issue in process

--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "2022-08-25  SPLIT       N  0.333333"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "2022-08-25               0.333333"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -224,19 +224,19 @@
        "2022-08-24               0.333333"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "splits.index = splits.index.map(lambda day: trading_dates_ticker[trading_dates_ticker.index(day) - 1]) # Shift dates 1 day back (the reason we cannot just use timedelta(days=1) is because that might not be a trading date.\n",
+    "splits.index = splits.index.map(lambda day : max(d for d in trading_dates_ticker if d < day)) # Shift dates 1 day back (the reason we cannot just use timedelta(days=1) is because that might not be a trading date.\n",
     "splits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "2019-06-07               0.066667"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
     "    if not splits.empty:\n",
     "        splits['cumulative_adjustment'] = splits['amount'][::-1].cumprod()\n",
     "        splits = splits.drop(columns=['type', 'subtype', 'amount'])\n",
-    "        splits.index = splits.index.map(lambda day: trading_dates_ticker[trading_dates_ticker.index(day) - 1])\n",
+    "        splits.index = splits.index.map(lambda day : max(d for d in trading_dates_ticker if d < day))\n",
     "        splits = splits.reindex(trading_dates_ticker) # Reindex using stock data \n",
     "        splits.cumulative_adjustment = splits.cumulative_adjustment.fillna(method='bfill').fillna(value=1) \n",
     "\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "2019-09-03  DIV      CD  0.168404"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -613,14 +613,14 @@
        "2019-09-03   0.168404   2019-08-30"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "split_adjusted_dividends['cum_div_date'] = split_adjusted_dividends.index.map(\\\n",
-    "    lambda day: trading_dates_ticker[trading_dates_ticker.index(day) - 1])\n",
+    "    lambda day : max(d for d in trading_dates_ticker if d < day))\n",
     "split_adjusted_dividends = split_adjusted_dividends[['amount', 'cum_div_date']]\n",
     "split_adjusted_dividends.index.names = ['ex_div_date']\n",
     "split_adjusted_dividends.head(3)"
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
        "2019-08-30 15:59:00  0.168404   2019-08-30 2019-08-30 15:59:00         91.620"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "2019-08-30 15:59:00    0.998162               0.922082  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "2019-06-05                 0.918868"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1001,8 @@
     "    if not split_adjusted_dividends.empty:\n",
     "        # Get cum div date\n",
     "        split_adjusted_dividends['cum_div_date'] = split_adjusted_dividends.index.map(\\\n",
-    "            lambda day: trading_dates_ticker[trading_dates_ticker.index(day) - 1])\n",
+    "            lambda day : max(d for d in trading_dates_ticker if d < day))\n",
+    "        \n",
     "        split_adjusted_dividends = split_adjusted_dividends[['amount', 'cum_div_date']]\n",
     "        split_adjusted_dividends.index.names = ['ex_div_date']\n",
     "\n",
@@ -1058,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1230,7 @@
        "2019-06-03 04:02:00      False  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,36 +1399,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyarrow.parquet as pq\n",
+    "# import pyarrow.parquet as pq\n",
     "\n",
-    "tickers_v3 = get_tickers(v=3)\n",
-    "tickers_v3[\"start_data\"] = np.nan\n",
-    "tickers_v3[\"end_data\"] = np.nan\n",
+    "# tickers_v3 = get_tickers(v=3)\n",
+    "# tickers_v3[\"start_data\"] = np.nan\n",
+    "# tickers_v3[\"end_data\"] = np.nan\n",
     "\n",
-    "for index, row in tickers_v3.iterrows():\n",
-    "    id = row['ID']\n",
-    "    try:\n",
-    "        dataset = pq.ParquetFile(DATA_PATH + f\"processed/m1/{id}.parquet\")\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"There is no data for {id}\")\n",
-    "        continue\n",
+    "# for index, row in tickers_v3.iterrows():\n",
+    "#     id = row['ID']\n",
+    "#     try:\n",
+    "#         dataset = pq.ParquetFile(DATA_PATH + f\"processed/m1/{id}.parquet\")\n",
+    "#     except FileNotFoundError:\n",
+    "#         print(f\"There is no data for {id}\")\n",
+    "#         continue\n",
     "\n",
-    "    # Reading metadata (statistics) of first and last row group. This avoids reading the entire file.\n",
-    "    # Reading everything from the datetime column and getting first/last row took 8 minutes. This took less than 50 sec.\n",
-    "    metadata_first_row_group = dataset.metadata.row_group(0)\n",
-    "    metadata_last_row_group = dataset.metadata.row_group(dataset.num_row_groups-1)\n",
-    "    # Retrieve statistics\n",
-    "    min_date = metadata_first_row_group.column(0).statistics.min\n",
-    "    max_date = metadata_last_row_group.column(0).statistics.max\n",
-    "    # Convert to date\n",
-    "    start_data = min_date.to_pydatetime().date()\n",
-    "    end_data = max_date.to_pydatetime().date()\n",
+    "#     # Reading metadata (statistics) of first and last row group. This avoids reading the entire file.\n",
+    "#     # Reading everything from the datetime column and getting first/last row took 8 minutes. This took less than 50 sec.\n",
+    "#     metadata_first_row_group = dataset.metadata.row_group(0)\n",
+    "#     metadata_last_row_group = dataset.metadata.row_group(dataset.num_row_groups-1)\n",
+    "#     # Retrieve statistics\n",
+    "#     min_date = metadata_first_row_group.column(0).statistics.min\n",
+    "#     max_date = metadata_last_row_group.column(0).statistics.max\n",
+    "#     # Convert to date\n",
+    "#     start_data = min_date.to_pydatetime().date()\n",
+    "#     end_data = max_date.to_pydatetime().date()\n",
     "    \n",
-    "    tickers_v3.loc[tickers_v3['ID'] == id, [\"start_data\", \"end_data\"] ] = [start_data, end_data]\n",
-    "    print(index)\n",
+    "#     tickers_v3.loc[tickers_v3['ID'] == id, [\"start_data\", \"end_data\"] ] = [start_data, end_data]\n",
+    "#     print(index)\n",
     "\n",
-    "tickers_v3.reset_index(inplace=True)\n",
-    "tickers_v3[[\"ID\", \"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"start_data\", \"end_data\", \"type\", \"cik\", \"composite_figi\"]].to_csv(\"../data/tickers_v4.csv\")"
+    "# tickers_v3.reset_index(inplace=True)\n",
+    "# tickers_v3[[\"ID\", \"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"start_data\", \"end_data\", \"type\", \"cik\", \"composite_figi\"]].to_csv(\"../data/tickers_v4.csv\")"
    ]
   },
   {
