--- a/10_extra_functions.ipynb
+++ b/10_extra_functions.ipynb
@@ -65,7 +65,7 @@
     "    timeframe=\"daily\",\n",
     "    regular_hours_only=False,\n",
     "    location=\"processed\",\n",
-    "    columns=[\"open\", \"high\", \"low\", \"close\", \"close_original\", \"volume\", \"tradeable\", \"halted\"],\n",
+    "    columns=[\"open\", \"high\", \"low\", \"close\", \"close_original\", \"turnover\", \"tradeable\"],\n",
     "):\n",
     "    \"\"\"Retrieves the data from our database\n",
     "\n",
