removed two incorrect adjustment which led to negative prices, fixed having volume bars

--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -65,15 +65,13 @@
     "    all_bars = []\n",
     "    # Find IDs with data in the specific half year that are not delisted before end of year\n",
     "    for i, row in tickers[tickers['end_date'] >= end_date_to_query].iterrows():\n",
-    "        bars = get_data(row['ID'], start_date, end_date_to_query, columns=['close', 'volume'])\n",
+    "        bars = get_data(row['ID'], start_date, end_date_to_query, columns=['close', 'turnover'])\n",
     "        bars['ID'] = row['ID']\n",
     "        all_bars.append(bars)\n",
     "        \n",
     "    # Calculate turnover\n",
     "    all_tickers = pd.concat(all_bars)\n",
-    "    all_tickers = all_tickers.groupby(\"ID\").agg({\"volume\": \"sum\", \"close\": \"mean\"})\n",
-    "    all_tickers['turnover'] = all_tickers['close'] * all_tickers['volume']\n",
-    "    all_tickers = all_tickers[['turnover']]\n",
+    "    all_tickers = all_tickers.groupby(\"ID\").agg({\"turnover\": \"sum\", \"close\": \"mean\"})\n",
     "    all_tickers.sort_values(by=\"turnover\", ascending=False, inplace=True)\n",
     "    dates_and_IDs[end_date.isoformat()] = list(all_tickers.head(500).index)\n",
     "    \n",
@@ -141,14 +139,14 @@
     "    id = row['ID']\n",
     "    \n",
     "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=True, \\\n",
-    "                  columns=['open', 'close', 'volume', 'close_original'])\n",
+    "                  columns=['open', 'close', 'turnover', 'close_original'])\n",
     "\n",
     "    if m1.empty:\n",
     "        continue\n",
     "\n",
     "    m1_open = m1[['open']]\n",
     "    m1_close = m1[['close', 'close_original']]\n",
-    "    m1_volume = m1[['close', 'volume']]\n",
+    "    m1_turnover = m1[['close', 'turnover']]\n",
     "    \n",
     "    # For every day, get the open price at 9:30 and close price 5 minutes before market close\n",
     "    m1_open = m1_open.between_time('9:30', '9:30')\n",
@@ -160,8 +158,7 @@
     "    # Get the turnover (ignoring early closes...)\n",
     "    m1_volume = m1_volume.between_time('9:30', '15:54')\n",
     "    m1_volume.index = m1_volume.index.date\n",
-    "    m1_volume = m1_volume.groupby(m1_volume.index).agg({\"close\": \"mean\", \"volume\": \"sum\"})\n",
-    "    m1_volume['turnover'] = m1_volume['close'] * m1_volume['volume']\n",
+    "    m1_volume = m1_volume.groupby(m1_volume.index).agg({\"turnover\": \"sum\"})\n",
     "    m1_volume = m1_volume[['turnover']]\n",
     "\n",
     "    # Calculate the drop and append to dates_and_IDs\n",
@@ -206,7 +203,7 @@
     "#     id = row['ID']\n",
     "\n",
     "#     m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=False, \\\n",
-    "#                   columns=['open', 'close', 'volume', 'close_original'])\n",
+    "#                   columns=['open', 'close', 'turnover', 'close_original'])\n",
     "\n",
     "#     if m1.empty:\n",
     "#         continue\n",
@@ -214,11 +211,11 @@
     "#     # Calculate variables needed in pre-market\n",
     "#     m1 = m1.between_time('4:00', '9:29')\n",
     "#     m1.index = m1.index.date\n",
-    "#     m1['close_avg'] = m1['close']\n",
-    "#     m1 = m1.groupby(m1.index).agg({\"open\": \"first\", \"close\": \"last\", \n",
-    "#                                    \"close_original\": \"last\", \"close_avg\": \"mean\", \"volume\": \"sum\"})\n",
+    "#     m1 = m1.groupby(m1.index).agg({\"open\": \"first\", \n",
+    "#                                    \"close\": \"last\", \n",
+    "#                                    \"close_original\": \"last\", \n",
+    "#                                    \"turnover\": \"sum\"})\n",
     "    \n",
-    "#     m1['turnover'] = m1['close_avg'] * m1['volume']\n",
     "#     m1['gap'] = (m1['close']/m1['open'] - 1)*100 # Base 100\n",
     "    \n",
     "#     big_gap = m1[(m1['gap'] >= 30) \\\n",
@@ -274,12 +271,9 @@
     "    # To get current open and pre-market volume\n",
     "    m1 = m1.between_time('4:00', '9:29')\n",
     "    m1.index = m1.index.date\n",
-    "    m1['close_avg'] = m1['close']\n",
     "    d1_premkt = m1.groupby(m1.index).agg({\"close\": \"last\", # This close is the 9:30 time\n",
     "                                   \"close_original\": \"last\", \n",
-    "                                   \"close_avg\": \"mean\", \n",
-    "                                   \"volume\": \"sum\"})\n",
-    "    d1_premkt['turnover'] = d1_premkt['close_avg'] * d1_premkt['volume']\n",
+    "                                   \"turnover\": \"sum\"})\n",
     "\n",
     "    # Calculate gap\n",
     "    gaps = d1_premkt.merge(d1[['prev_close']], left_index=True, right_index=True)\n",
